Added "spontan ansokan" and tip on how to end cover letter for such an application. Removed Skanska photo.

--- a/main.tex
+++ b/main.tex
@@ -251,7 +251,7 @@
 \clearpage
 %-----       letter       ---------------------------------------------------------
 % recipient data
-\recipient{Tyr{\'e}ns AB}{Ans{\"o}kan om jobb inom energi och byggfysik eller h{\aa}llbart byggande}
+\recipient{Tyr{\'e}ns AB}{Spontan ans{\"o}kan om jobb inom energi och byggfysik eller h{\aa}llbart byggande}
 \date{\today}
 \opening{\textbf{Engagerad nyexaminerad ingenj{\"o}r med arbetslivserfarenhet som el- och VVS-konsult}}
 \closing{Med v{\"a}nliga h{\"a}lsningar,}
@@ -288,6 +288,7 @@ Jag anser att man m{\aa}ste l{\"a}gga tonvikten p{\aa} att optimera driften av b
 Jag ser fram emot att f{\"o}rhoppningsvis f{\aa} arbeta p{\aa} Tyr{\'e}ns.
 Jag {\"a}r tillg{\"a}nglig fr.o.m. den 3 juni 2019 (vecka 23).
 % Jag ser fram emot ett personligt m{\"o}te d{\"a}r jag kan ber{\"a}tta mer om mig sj{\"a}lv och vad jag kan tillf{\"o}ra Tyr{\'e}ns.
+När du skriver en spontan ansökan (till en icke utannonserad tjänst) är det bra att avsluta med att tydliggöra vem som förväntas ta nästa kontakt – du eller arbetsgivaren. Ett exempel kan vara ”Jag ringer er i slutet av nästa vecka”, eller ”Slå mig gärna en signal om det låter intressant”.
 
 Med v{\"a}nliga h{\"a}lsningar,
 
