Started new cover letter draft: tried to "inleda slagkraftigt". Plus changed closing statement asking Tyrens to email (rather than call).

--- a/main.tex
+++ b/main.tex
@@ -258,6 +258,12 @@
 %\enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
+Mitt yrkesm{\aa}l {\"a}r att minimisera byggnaders p{\aa}verkan p{\aa} milj{\"o}n.
+Eftersom bara cirka 1\% av befintliga byggnader ers{\"a}tts av nya byggnader/ nybyggnader per {\aa}r vill jag fokusera mina arbete/ anstr{\"a}ngningar p{\aa} att f{\"o}rb{\"a}ttra befintliga byggnader.
+D{\"a}rf{\"o}r vill jag jobba p{\aa} Tyr{\'e}ns, f{\"o} ni erbjuder tj{\"a}nster inom just driftoptimering...
+
+
+\newpage
 Jag {\"a}r en 23-{\aa}rig ingenj{\"o}rsstudent med r{\"o}tterna i Sk{\aa}ne, Kenya, Frankrike och Skottland.
 % Jag har nyss slutf{\"o}rt mitt fj{\"a}rde {\aa}r i programmet \textit{Architectural Engineering} p{\aa} Heriot-Watt University i Edinburgh.
 Jag kommer att ta min magisterexamen i programmet \textit{Architectural Engineering} p{\aa} Heriot-Watt University i Edinburgh i juni 2019 och planerar d{\aa} att flytta tillbaka till Sverige f{\"o}r att arbeta.
@@ -288,7 +294,8 @@ Jag anser att man m{\aa}ste l{\"a}gga tonvikten p{\aa} att optimera driften av b
 Jag ser fram emot att f{\"o}rhoppningsvis f{\aa} arbeta p{\aa} Tyr{\'e}ns.
 Jag {\"a}r tillg{\"a}nglig fr.o.m. den 3 juni 2019 (vecka 23).
 % Jag ser fram emot ett personligt m{\"o}te d{\"a}r jag kan ber{\"a}tta mer om mig sj{\"a}lv och vad jag kan tillf{\"o}ra Tyr{\'e}ns.
-När du skriver en spontan ansökan (till en icke utannonserad tjänst) är det bra att avsluta med att tydliggöra vem som förväntas ta nästa kontakt – du eller arbetsgivaren. Ett exempel kan vara ”Jag ringer er i slutet av nästa vecka”, eller ”Slå mig gärna en signal om det låter intressant”.
+% När du skriver en spontan ansökan (till en icke utannonserad tjänst) är det bra att avsluta med att tydliggöra vem som förväntas ta nästa kontakt – du eller arbetsgivaren. Ett exempel kan vara ”Jag ringer er i slutet av nästa vecka”, eller ”
+\hl{Mejla mig g{\"a}rna/ Sl{\aa} mig g{\"a}rna en signal om det l{\aa}ter intressant!}
 
 Med v{\"a}nliga h{\"a}lsningar,
 
