More or less completed first paragraph of cover letter.

--- a/main.tex
+++ b/main.tex
@@ -251,16 +251,24 @@
 \clearpage
 %-----       letter       ---------------------------------------------------------
 % recipient data
-\recipient{Tyr{\'e}ns AB}{Spontan ans{\"o}kan om jobb inom energi och byggfysik eller h{\aa}llbart byggande}
+\recipient{Tyr{\'e}ns AB}{Spontan ans{\"o}kan om jobb inom energi, byggfysik eller h{\aa}llbart byggande}
 \date{\today}
 \opening{\textbf{Engagerad nyexaminerad ingenj{\"o}r med arbetslivserfarenhet som el- och VVS-konsult}}
 \closing{Med v{\"a}nliga h{\"a}lsningar,}
 %\enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
-Mitt yrkesm{\aa}l {\"a}r att minimisera byggnaders p{\aa}verkan p{\aa} milj{\"o}n.
-Eftersom bara cirka 1\% av befintliga byggnader ers{\"a}tts av nya byggnader/ nybyggnader per {\aa}r vill jag fokusera mina arbete/ anstr{\"a}ngningar p{\aa} att f{\"o}rb{\"a}ttra befintliga byggnader.
-D{\"a}rf{\"o}r vill jag jobba p{\aa} Tyr{\'e}ns, f{\"o} ni erbjuder tj{\"a}nster inom just driftoptimering...
+Mitt yrkesm{\aa}l {\"a}r att bidra till minimiseringen av byggnaders p{\aa}verkan p{\aa} milj{\"o}n.
+Enligt EUs byggnaders energiprestanda direktiv (2010/31/EU) ska alla nya byggnader vara nära-nollenergi vid slutet av {\aa}ret 2020.
+Men nya nära-nollenergibyggnader kommer g{\"o}ra en liten insats mot begr{\"a}nsingen av klimatf{\"o}r{\"a}ndringen j{\"a}mf{\"o}rt med all befintliga byggnader som inte {\"a}r nära-nollenergi.
+%1\% av befintliga byggnader i Storbritannien ers{\"a}tts nya byggnader/ nybyggnader per {\aa}r
+%Eftersom bara cirka 1\% av befintliga byggnader ers{\"a}tts av nya byggnader/ nybyggnader per {\aa}r 
+D{\"a}rf{\"o}r vill jag fokusera min karri{\"a}r p{\aa} att f{\"o}rb{\"a}ttra energiprestandan av befintliga byggnader.
+Jag tror att jag kan n{\aa} detta m{\aa}l p{\aa} Tyr{\'e}ns eftersom ni erbjuder tj{\"a}nster inom driftoptimering och h{\aa}llbart byggande. %, som intresserar mig v{\"a}ldigt mycket.
+Mitt intresse %i detta omr{\aa}de 
+kopplat till min utbildning och arbetslivserfarenhet inom installationsteknik och byggfysik har v{\"a}l f{\"o}rberett mig f{\"o}r ett yrke inom detta omr{\aa}de/ har givit mig en bra grund vad g{\"a}ller att designa smarta, h{\aa}llbara, energisn{\aa}la och h{\"a}lsosamma byggnader med bekv{\"a}ma inomhusmilj{\"o}.
+
+
 
 
 \newpage
