Completed cover letter.

--- a/main.tex
+++ b/main.tex
@@ -251,67 +251,45 @@
 \clearpage
 %-----       letter       ---------------------------------------------------------
 % recipient data
-\recipient{Tyr{\'e}ns AB}{Spontan ans{\"o}kan om jobb inom energi, byggfysik eller h{\aa}llbart byggande}
+\recipient{Tyr{\'e}ns AB}{Spontan ans{\"o}kan om jobb inom driftoptimering eller h{\aa}llbart byggande}
 \date{\today}
 \opening{\textbf{Engagerad nyexaminerad ingenj{\"o}r med arbetslivserfarenhet som el- och VVS-konsult}}
 \closing{Med v{\"a}nliga h{\"a}lsningar,}
 %\enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
+Jag {\"a}r en 23-{\aa}rig ingenj{\"o}rsstudent med r{\"o}tterna i Sk{\aa}ne, Kenya, Frankrike och Skottland.
+Jag kommer att ta min magisterexamen i programmet \textit{Architectural Engineering} p{\aa} Heriot-Watt University i Edinburgh i juni 2019 och planerar d{\aa} att flytta tillbaka till Sverige f{\"o}r att arbeta.
+Sverige lockar eftersom landet {\"a}r v{\"a}rldsledande inom h{\aa}llbar byggande och samh{\"a}llsutveckling.
+
 Mitt yrkesm{\aa}l {\"a}r att bidra till minimiseringen av byggnaders p{\aa}verkan p{\aa} milj{\"o}n.
 Enligt EUs byggnaders energiprestanda direktiv (2010/31/EU) ska alla nya byggnader vara nära-nollenergi vid slutet av {\aa}ret 2020.
-Men nya nära-nollenergibyggnader kommer g{\"o}ra en liten insats mot begr{\"a}nsingen av klimatf{\"o}r{\"a}ndringen j{\"a}mf{\"o}rt med all befintliga byggnader som inte {\"a}r nära-nollenergi.
+Men nya nära-nollenergibyggnader kommer g{\"o}ra lite insats mot begr{\"a}nsingen av klimatf{\"o}r{\"a}ndringen j{\"a}mf{\"o}rt med all befintliga byggnader som inte {\"a}r nära-nollenergi.
 %1\% av befintliga byggnader i Storbritannien ers{\"a}tts nya byggnader/ nybyggnader per {\aa}r
 %Eftersom bara cirka 1\% av befintliga byggnader ers{\"a}tts av nya byggnader/ nybyggnader per {\aa}r 
 D{\"a}rf{\"o}r vill jag fokusera min karri{\"a}r p{\aa} att f{\"o}rb{\"a}ttra energiprestandan av befintliga byggnader.
 Jag tror att jag kan n{\aa} detta m{\aa}l p{\aa} Tyr{\'e}ns eftersom ni erbjuder tj{\"a}nster inom driftoptimering och h{\aa}llbart byggande. %, som intresserar mig v{\"a}ldigt mycket.
 Mitt intresse %i detta omr{\aa}de 
-kopplat till min utbildning och arbetslivserfarenhet inom installationsteknik och byggfysik har v{\"a}l f{\"o}rberett mig f{\"o}r ett yrke inom detta omr{\aa}de/ har givit mig en bra grund vad g{\"a}ller att designa smarta, h{\aa}llbara, energisn{\aa}la och h{\"a}lsosamma byggnader med bekv{\"a}ma inomhusmilj{\"o}.
+kopplat till min utbildning och arbetslivserfarenhet inom installationsteknik och byggfysik har v{\"a}l f{\"o}rberett mig f{\"o}r ett yrke inom detta omr{\aa}de.
 
-
-
-
-\newpage
-Jag {\"a}r en 23-{\aa}rig ingenj{\"o}rsstudent med r{\"o}tterna i Sk{\aa}ne, Kenya, Frankrike och Skottland.
-% Jag har nyss slutf{\"o}rt mitt fj{\"a}rde {\aa}r i programmet \textit{Architectural Engineering} p{\aa} Heriot-Watt University i Edinburgh.
-Jag kommer att ta min magisterexamen i programmet \textit{Architectural Engineering} p{\aa} Heriot-Watt University i Edinburgh i juni 2019 och planerar d{\aa} att flytta tillbaka till Sverige f{\"o}r att arbeta.
-Sverige lockar eftersom landet {\"a}r v{\"a}rldsledande inom h{\aa}llbar byggande och samh{\"a}llsutveckling.
-%D{\"a}rf{\"o}r s{\"o}ker jag ett sommarjobb i Sverige i {\aa}r f{\"o}r att b{\"o}rja l{\"a}ra k{\"a}nna n{\aa}gra svenska f{\"o}retag.
-
-\textit{Customise to Tyrens.}
-%S{\aa} fort jag l{\"a}ste om Tyr{\'e}nss h{\"a}ngivenhet till h{\aa}llbar utveckling, konsultarbete inom installationsteknik och internationella n{\"a}rvaro t{\"a}nkte jag hur bra jag skulle passa in i f{\"o}retaget.
-Mitt intresse inom byggbranschen kopplat till min utbildning och min arbetslivserfarenhet har givit mig en bra grund vad g{\"a}ller att designa smarta, h{\aa}llbara, energisn{\aa}la och h{\"a}lsosamma byggnader med bekv{\"a}ma inomhusmilj{\"o}.
-Detta kan demonstreras genom min optimering av dagsljus i utformningen av ett allm{\"a}nt bibliotek f{\"o}r att minimera behovet av elektrisk belysning och maximera inv{\aa}narnas visuella och termiska bekv{\"a}mlighet.
+Jag har en bra grund vad g{\"a}ller att designa smarta, h{\aa}llbara, energisn{\aa}la och h{\"a}lsosamma byggnader med bekv{\"a}ma inomhusmilj{\"o}.
+Ett exempel {\"a}r min optimering av dagsljus i utformningen av ett allm{\"a}nt bibliotek f{\"o}r att minimera behovet av elektrisk belysning och maximera inv{\aa}narnas visuella och termiska bekv{\"a}mlighet.
 Av 11 grupper fick v{\aa}r grupps designl{\"o}sning 1:a pris i h{\aa}llbarhet i biblioteksprojektet.
 Dessutom {\"a}r jag angel{\"a}gen om att arbeta med Building Information Modelling (BIM).
-% Dessutom har jag en god f{\"o}rst{\aa}else f{\"o}r (den brittiska) BIM processen, speciellt i f{\"o}rh{\aa}llande med installationstekniker, p{\aa} grund av mitt examensarbete.
 Tack vare mitt examensarbete har jag en god f{\"o}rst{\aa}else f{\"o}r den brittiska BIM processen, speciellt i f{\"o}rh{\aa}llande med installationstekniker.
 Jag har ocks{\aa} lite praktisk erfarenhet med BIM teknologi (n{\"a}mligen Revit) fr{\aa}n universitetet och mina praktiktj{\"a}nster.
 
-% Tack vare mitt internationella bakgrund och exponering till olika kulturer {\"a}r jag anpassbar. % i olika sociala sammanhang.
-% och letar efter m{\"o}jligheter att arbeta i olika l{\"a}nder.
-% I framtiden vill jag {\"o}va och utmana mina tekniska f{\"a}rdigheter i ett brett spektrum av klimatiska, kulturella och juridiska sammanhang.
-% Med Tyr{\'e}nss internationella n{\"a}rvaro hoppas jag eventuellt f{\aa} m{\"o}jligheter att jobba i olika l{\"a}nder.
-
-\textit{Discuss sweet spot (c.f. industrial project).}
-P{\aa} Tyr{\'e}ns {\"a}r jag mest intresserad av att jobba inom energi och byggfysik eller h{\aa}llbart byggande.
-Sedan jag uppt{\"a}ckte driftoptimeringsyrket p{\aa} Hoare Lea i 2017 har jag {\"o}verv{\"a}gt att f{\"o}rf{\"o}lja det som min framtida karri{\"a}r.
-Jag anser att man m{\aa}ste l{\"a}gga tonvikten p{\aa} att optimera driften av befintliga byggnader, som utg{\"o}r den mesta av v{\aa}r bebyggda milj{\"o}, f{\"o}r att ge ett betydande bidrag till att minska klimatf{\"o}r{\"a}ndringen.
-
-
 Jag ser fram emot att f{\"o}rhoppningsvis f{\aa} arbeta p{\aa} Tyr{\'e}ns.
 Jag {\"a}r tillg{\"a}nglig fr.o.m. den 3 juni 2019 (vecka 23).
-% Jag ser fram emot ett personligt m{\"o}te d{\"a}r jag kan ber{\"a}tta mer om mig sj{\"a}lv och vad jag kan tillf{\"o}ra Tyr{\'e}ns.
-% När du skriver en spontan ansökan (till en icke utannonserad tjänst) är det bra att avsluta med att tydliggöra vem som förväntas ta nästa kontakt – du eller arbetsgivaren. Ett exempel kan vara ”Jag ringer er i slutet av nästa vecka”, eller ”
-\hl{Mejla mig g{\"a}rna/ Sl{\aa} mig g{\"a}rna en signal om det l{\aa}ter intressant!}
+Maila mig g{\"a}rna om det l{\aa}ter intressant!
 
-Med v{\"a}nliga h{\"a}lsningar,
+%Med v{\"a}nliga h{\"a}lsningar,
 
 %\vspace{5mm}
 
-Stephanie Baird-Ekl{\"o}w
+%Stephanie Baird-Ekl{\"o}w
 
-%\makeletterclosing
+\makeletterclosing
 
 %\clearpage\end{CJK*}                              % if you are typesetting your resume in Chinese using CJK; the \clearpage is required for fancyhdr to work correctly with CJK, though it kills the page numbering by making \lastpage undefined
 \end{document}
