Deleted birthday and (un)paid. Shifted LaTeX down. Started re-writing målsättning.

--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
 %\phone[fax]{+3~(456)~789~012}                      % optional, remove / comment the line if not wanted
 \email{stephanie.eklow@gmail.com}                               % optional, remove / comment the line if not wanted
 %\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
-\extrainfo{F{\"o}delsedatum: 950409}                 % optional, remove / comment the line if not wanted
+%\extrainfo{F{\"o}delsedatum: 950409}                 % optional, remove / comment the line if not wanted
 \photo[64pt][0.4pt]{DSC_0142.JPG}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 %\quote{}                                 % optional, remove / comment the line if not wanted
 
@@ -63,8 +63,13 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 
-\section{M{\aa}ls{\"a}ttning}
-\cvitem{}{Snart nyexaminerad student som l{\"a}ser installationsteknik i Skottland s{\"o}ker jobb inom energi och byggfysik eller h{\aa}llbart byggande p{\aa} Tyr{\'e}ns fr.o.m. juni 2019.}{}
+\section{Sammanfattning och m{\aa}l}
+\cvitem{}{
+	\begin{itemize}%
+		\item Har arbetslivserfarenhet som el- och VVS-konsult samt inom Milj{\"o}byggnads-certifiering och v{\"a}rmebatterier.
+		\item {\"A}r bekant med BIM-processen, efter att ha skrivit en avhandling om samarbete med h{\"a}nsyn till BIM.
+		\item 
+	\end{itemize}}{}
 
 
 \section{Utbildning}
@@ -112,8 +117,6 @@
 
 \section{Praktiktj{\"a}nster}
 
-\subsection{Obetalda}
-
 \cventry{2018 augusti}{Milj{\"o}byggnadssamordnare}{Sweco}{Malm{\"o}}{Sverige}{
 	\begin{itemize}%
 		\item Assisterade min handledare, en certifierad Milj{\"o}byggnadssamordnare, att genomf{\"o}ra en milj{\"o}certifieringsf{\"o}rstudie f{\"o}r en befintlig fastighet som bestod av tre byggnader.
@@ -122,8 +125,6 @@
 \end{itemize}}
 
 \vspace{2mm}
-
-\subsection{Betalda}
 
 \cventry{2018 juli}{Pratikant}{Sunamp}{Edinburgh}{Storbritannien}{
 	\begin{itemize}%
@@ -201,9 +202,9 @@
   \end{itemize}}
   \cvcolumn[0.75]{Grundl{\"a}ggande kunskaper i\ldots}{
   \begin{itemize}
-        \item \LaTeX
         \item Autodesk Revit och AutoCAD
         \item IES-VE (byggnadsmodellering med energianalys)
+        \item \LaTeX
             %\item Standard Assessment Procedure (SAP)
             %\item Simplified Building Energy Model (SBEM)
         %\item Belysningsdesign: DIALux
